--- a/application/index/view/layouts/guide_format2.html
+++ b/application/index/view/layouts/guide_format2.html
@@ -81,7 +81,7 @@
                                             <li><a href="//www.gogo198.cn/goods-{$v3['other_goods']}.html" target="_blank" class="f15"><i class="fa">&gt;</i> {$v3['name']}</a></li>
                                             {elseif($v3['go_other']==3)}
                                             <!--菜单链接-->
-                                            <li><a href="/?s=index/detail&id={$v3['other_navbar']}&company_id={$company_id}&company_type={$company_type}" target="_blank" class="f15"><i class="fa">&gt;</i> {$v3['name']}</a></li>
+                                            <li><a href="/?s=merch/detail&id={$v3['other_navbar']}&company_id={$company_id}&company_type={$company_type}" target="_blank" class="f15"><i class="fa">&gt;</i> {$v3['name']}</a></li>
                                             {elseif($v3['go_other']==4)}
                                             <!--第三方链接-->
                                             <li><a href="{$v3['link']}" target="_blank" class="f15"><i class="fa">&gt;</i> {$v3['name']}</a></li>
