--- a/application/index/view/layouts/share.html
+++ b/application/index/view/layouts/share.html
@@ -22,6 +22,6 @@
         "share": {}
     };
     with (document) {
-        0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = '/js/ststic/api/js/share.js?v=<?php echo time();?>.js?cdnversion=' + ~(-new Date() / 36e5)];
+        0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = '/js/static/api/js/share.js?v=<?php echo time();?>.js?cdnversion=' + ~(-new Date() / 36e5)];
     }
 </script>
