--- a/application/index/view/layouts/guide_format2.html
+++ b/application/index/view/layouts/guide_format2.html
@@ -1,7 +1,7 @@
 <style>
     /*卡片导航展示版式*/
     .cardDiv {width: 100%;margin: 50px 0px 0px;padding: 10px 10px;position: relative;border: 2px solid {$data['websites']['info']['color']};box-sizing: border-box;border-radius: 5px;border-top-left-radius: 0;}
-    .cardDiv .storeTitle {position: absolute;top: -36px;left: -2px;background: #1761b7;color: {$data['websites']['info']['color_word']};padding: 5px 10px;border: 2px solid {$data['websites']['info']['color']};z-index: 9;border-bottom: 0;border-radius: 5px;border-bottom-right-radius: 0;border-bottom-left-radius: 0;font-weight: 800;}
+    .cardDiv .storeTitle {position: absolute;top: -36px;left: -2px;background: {$data['websites']['info']['color']};color: {$data['websites']['info']['color_word']};padding: 5px 10px;border: 2px solid {$data['websites']['info']['color']};z-index: 9;border-bottom: 0;border-radius: 5px;border-bottom-right-radius: 0;border-bottom-left-radius: 0;font-weight: 800;}
     .cardDiv .swiper-container{overflow: hidden;position: relative;padding: 10px 20px;box-sizing: border-box;}
     .cardDiv .swiper-container .swiper-slide{height:100%;margin-right: 60px;}
     .cardDiv .cross-section{background-position: center;background-size: cover;position: relative;transform-style: preserve-3d;box-shadow: 0px 0px 10px #666;border-radius: 8px;overflow:hidden;}
