--- a/application/index/view/layouts/guide_format3.html
+++ b/application/index/view/layouts/guide_format3.html
@@ -1,7 +1,7 @@
 <style>
     /*触发搜索版式*/
     .festivalDiv {width: 100%;margin: 50px 0px 0px;padding: 20px;position: relative;border: 2px solid {$data['websites']['info']['color']};box-sizing: border-box;border-radius: 5px;border-top-left-radius: 0;}
-    .festivalDiv .storeTitle {position: absolute;top: -36px;left: -2px;background: #1761b7;color: {$data['websites']['info']['color_word']};padding: 5px 10px;border: 2px solid {$data['websites']['info']['color']};z-index: 9;border-bottom: 0;border-radius: 5px;border-bottom-right-radius: 0;border-bottom-left-radius: 0;font-weight: 800;}
+    .festivalDiv .storeTitle {position: absolute;top: -36px;left: -2px;background: {$data['websites']['info']['color']};color: {$data['websites']['info']['color_word']};padding: 5px 10px;border: 2px solid {$data['websites']['info']['color']};z-index: 9;border-bottom: 0;border-radius: 5px;border-bottom-right-radius: 0;border-bottom-left-radius: 0;font-weight: 800;}
     .festivalDiv .hsColumn {display: grid;grid-template-columns: repeat(3, 1fr);-moz-column-gap: 20px;column-gap: 20px;row-gap: 20px;margin-bottom: 20px;}
     .festivalDiv .hsColumn:nth-of-type(2){margin-bottom: 0;}
     .festivalDiv .hsDiv {height: 220px;position: relative;box-shadow: 0px 0px 8px 0px #797777;}
