--- a/application/index/view/layouts/guide_format4.html
+++ b/application/index/view/layouts/guide_format4.html
@@ -1,7 +1,7 @@
 <style>
     /*杂志导航版式*/
     .industryDiv {width: 100%;margin: 50px 0px 0px;padding: 20px;position: relative;border: 2px solid {$data['websites']['info']['color']};box-sizing: border-box;border-radius: 5px;border-top-left-radius: 0;}
-    .industryDiv .storeTitle {position: absolute;top: -36px;left: -2px;background: #1761b7;color: {$data['websites']['info']['color_word']};padding: 5px 10px;border: 2px solid {$data['websites']['info']['color']};z-index: 9;border-bottom: 0;border-radius: 5px;border-bottom-right-radius: 0;border-bottom-left-radius: 0;font-weight: 800;}
+    .industryDiv .storeTitle {position: absolute;top: -36px;left: -2px;background: {$data['websites']['info']['color']};color: {$data['websites']['info']['color_word']};padding: 5px 10px;border: 2px solid {$data['websites']['info']['color']};z-index: 9;border-bottom: 0;border-radius: 5px;border-bottom-right-radius: 0;border-bottom-left-radius: 0;font-weight: 800;}
     .industryDiv .serviceBox{width: 100%;margin-top:0px;display: grid;grid-template-columns: repeat(3,1fr);-moz-column-gap: 20px;column-gap: 20px;row-gap: 20px;align-items: flex-start;}
     .industryDiv .serviceBox .leftBox{width: 370px;height:568px;border:2px solid {$data['websites']['info']['color_word']};border-radius: 8px;box-shadow: 0px 0px 8px 0px #797777;margin-right:0px;}
     .industryDiv .serviceBox .leftBox:hover{border-color:{$data['websites']['info']['color']};}
@@ -9,8 +9,8 @@
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent{background-size: 100%;background-repeat:no-repeat;width: -webkit-fill-available;height:100%;position: relative;cursor: pointer;border-radius: 6px;}
     .industryDiv .serviceBox .leftBox .cont6 .searviceMask{position: absolute;bottom:0;left:0;background:#000;z-index: 10;opacity: 0.7;width: 100%;height:100%;border-radius: 6px;display: none;}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv{z-index: 12;position: absolute;bottom:-40px;left:50%;transform:translate(-15%,-100%);width: 100%;margin:0 auto;}
-    .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceTitle{font-size:25px;font-weight: 800;color:#1f5188;}
-    .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceDesc{font-size:15px;font-weight: 800;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 7;overflow: hidden;text-overflow: ellipsis;width: 100%;margin-top:15px;color:#1f5188;}
+    .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceTitle{font-size:25px;font-weight: 800;color:{$data['websites']['info']['color']};}
+    .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceDesc{font-size:15px;font-weight: 800;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 7;overflow: hidden;text-overflow: ellipsis;width: 100%;margin-top:15px;color:{$data['websites']['info']['color']};}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceIn{font-weight:800;margin-top:15px;width: fit-content;color: {$data['websites']['info']['color_word']};font-size: 15px;background: #1f5188;padding: 4px 15px;border-radius: 15px;border: 2px solid {$data['websites']['info']['color_word']};}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceIn:hover{color:{$data['websites']['info']['color_word']};background:#e60000;}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .mob_cont6{display:none;}
@@ -24,7 +24,7 @@
     .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv .serviceTitleTop{font-size:25px;font-weight: 800;color:{$data['websites']['info']['color_word']};margin-bottom:0px;text-align: center;margin-top:50%;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;width: 150px;padding: 0 5px;box-sizing: border-box;}
     .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv .serviceTitle{font-size:25px;font-weight: 800;color:{$data['websites']['info']['color_word']};margin-bottom:0px;text-align: center;margin-top:5px;}
     .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv .serviceTxt{width:50%;}
-    .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv .serviceTxt .serviceDesc{font-size:15px;font-weight: 800;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 8;overflow: hidden;text-overflow: ellipsis;width: 100%;margin-top:0px;color:#1f5188;}
+    .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv .serviceTxt .serviceDesc{font-size:15px;font-weight: 800;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 8;overflow: hidden;text-overflow: ellipsis;width: 100%;margin-top:0px;color:{$data['websites']['info']['color']};}
     .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv:hover{border-color:{$data['websites']['info']['color']};color:{$data['websites']['info']['color_word']};}
     .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv:hover .serviceTitle{color:{$data['websites']['info']['color_word']};}
     .industryDiv .serviceBox .rightBox .serviceContent .serviceDiv:hover .serviceDesc{color:{$data['websites']['info']['color_word']};}
