--- a/application/index/view/layouts/guide_format4.html
+++ b/application/index/view/layouts/guide_format4.html
@@ -11,7 +11,7 @@
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv{z-index: 12;position: absolute;bottom:-40px;left:50%;transform:translate(-15%,-100%);width: 100%;margin:0 auto;}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceTitle{font-size:25px;font-weight: 800;color:{$data['websites']['info']['color']};}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceDesc{font-size:15px;font-weight: 800;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 7;overflow: hidden;text-overflow: ellipsis;width: 100%;margin-top:15px;color:{$data['websites']['info']['color']};}
-    .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceIn{font-weight:800;margin-top:15px;width: fit-content;color: {$data['websites']['info']['color_word']};font-size: 15px;background: #1f5188;padding: 4px 15px;border-radius: 15px;border: 2px solid {$data['websites']['info']['color_word']};}
+    .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceIn{font-weight:800;margin-top:15px;width: fit-content;color: {$data['websites']['info']['color_word']};font-size: 15px;background: {$data['websites']['info']['color']};padding: 4px 15px;border-radius: 15px;border: 2px solid {$data['websites']['info']['color_word']};}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .serviceIn:hover{color:{$data['websites']['info']['color_word']};background:#e60000;}
     .industryDiv .serviceBox .leftBox .cont6 .serviceContent .serviceDiv .mob_cont6{display:none;}
     .industryDiv .serviceBox .rightBox{width:100%;height:100%;grid-column-start: 2;grid-column-end: 4;}
