--- a/application/index/view/index/shop_backend/save_shop_guide_content2.html
+++ b/application/index/view/index/shop_backend/save_shop_guide_content2.html
@@ -271,7 +271,7 @@
             var selectedOption = selectElement.options[selectElement.selectedIndex];
 
             let img = selectedOption.getAttribute('data-img');
-            img = img.replace("//rte.gogo198.cn","");
+            img = img.replace("//dtc.gogo198.net","");
             let name = selectedOption.getAttribute('data-name');
 
             $('input[name="name"]').val(name);
