--- a/application/index/view/index/shop_backend/shop_guide_content_list.html
+++ b/application/index/view/index/shop_backend/shop_guide_content_list.html
@@ -194,7 +194,7 @@
     });
 
     function content_manage(pid,typ){
-        parent.location.href="/?s=index/shop_guide_content_list2&company_id={$company_id}&company_type={$company_type}&guide_id={$guide_id}&top_id={$top_id}&pid="+pid;
+        parent.location.href="/?s=index/shop_guide_content_list2&company_id={$company_id}&company_type={$company_type}&guide_id={$guide_id}&top_id="+pid;
     }
 
     //内容删除
