--- a/application/index/view/layouts/recommend.html
+++ b/application/index/view/layouts/recommend.html
@@ -121,7 +121,7 @@
                     {if $v['go_other']==7}
                     <div class="news{$k}" style="width:100%;height:100%;display:{if $k!=0} none {/if};">
 <!--                        <iframe src="https://boss.gogo198.cn/?s=customer/customer_online&pa=2&who_send=2&id=0&pid=0&company_id={$company_id}&isframe=1&uid=<?php echo session('account.gogo_id');?>" frameborder="0" style="width:100%;height:calc(100% + 3px);"></iframe>-->
-                        <iframe src="https://boss.gogo198.cn/?s=memberc/member_center&identify=0&outsideUrl='https://dtc.gogo198.net/?s=merch/merch_shop_index&company_id=<?php echo $company_id;?>&company_type=<?php echo $company_type;?>'&mid=<?php echo base64_encode(session('account.id'));?>" frameborder="0" style="width:100%;height:calc(100% + 3px);"></iframe>
+                        <iframe src="https://boss.gogo198.cn/?s=memberc/member_center&identify=0&outsideUrl='https://dtc.gogo198.net/?s=merch/merch_shop_index&company_id=<?php echo $company_id;?>&company_type=<?php echo $company_type;?>'&mid=<?php echo base64_encode(session('account.id'));?>&height_limit=0" frameborder="0" style="width:100%;height:calc(100% + 3px);"></iframe>
                     </div>
                     {/if}
                     {/foreach}
