--- a/application/index/view/index/shop_backend/artical_manage.html
+++ b/application/index/view/index/shop_backend/artical_manage.html
@@ -93,7 +93,7 @@
     <div id="toolbar" class="btn-group" style="margin-top: 10px;margin-bottom: 10px;line-height: 34px;">
         <button type="button" onclick="save(1,'/?s=index/save_artical&company_type={$company_type}&company_id={$company_id}');" class="btn btn-default">
             <i class="fas fa-add"></i>
-            创建活动
+            创建文章
         </button>
     </div>
     <table class="layui-hide" id="mainTable"></table>
