--- a/application/index/view/index/shop_backend/description_manage.html
+++ b/application/index/view/index/shop_backend/description_manage.html
@@ -147,7 +147,7 @@
                         var result = "";
 
                         result += '<a onclick="save(1,' + "'/?s=index/save_description&company_type={$company_type}&company_id={$company_id}&id="+ d.id + '\');" class="layui-btn layui-btn-xs btn-edit btn"><i class="fas fa-edit"></i> 编辑</a>';
-                        result += '<a onclick="save(2,' + "'/?s=index/keywords_manage&company_type={$company_type}&company_id={$company_id}&type_id="+ d.id + '\');" class="layui-btn layui-btn-xs btn-edit btn"><i class="fas fa-manage"></i> 管理二级分类</a>';
+                        result += '<a onclick="save(2,' + "'/?s=index/keywords_manage&company_type={$company_type}&company_id={$company_id}&type_id="+ d.id + '\');" class="layui-btn layui-btn-xs btn-waring btn"><i class="fas fa-edit"></i> 管理二级分类</a>';
                         result += '<a onclick="del('+ "'"+d.id+"'" +',1);" class="layui-btn layui-btn-xs btn-delete btn"><i class="fas fa-trash"></i> 删除</a>';
 
                         return [
