--- a/application/index/view/index/shop_backend/save_shop_menu.html
+++ b/application/index/view/index/shop_backend/save_shop_menu.html
@@ -12,6 +12,7 @@
         * {margin: 0;padding: 0;box-sizing: border-box;font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
         body {color: var(--text);line-height: 1.6;overflow-x: hidden;}
         h1, h2, h3, h4, h5, h6 {font-family: 'Montserrat', sans-serif;font-weight: 700;}
+        .layui-form-label{padding:8px;}
 
         .btn {padding: 12px 25px;border-radius: 50px;text-decoration: none;font-weight: 600;transition: all 0.3s ease;cursor: pointer;display: inline-block;text-align: center;border: none;font-family: 'Montserrat', sans-serif;}
         .btn-outline {border: 2px solid var(--primary);color: var(--primary);background: transparent;margin-right: 15px;}
@@ -114,7 +115,7 @@
         <legend>导向图上传</legend>
         <div class="layui-field-box">
             <div class="layui-form-item">
-                <div class="layui-form-label">导向图(815*455)</div>
+                <div class="layui-form-label">导向图(像素：815*455)</div>
                 <div class="layui-input-block">
                     <div class="layui-upload" style="margin-top: 10px;">
                         <button type="button" class="layui-btn" id="img_file-upload">上传图片(一张)</button>
