--- a/application/index/view/index/shop_backend/search_result.html
+++ b/application/index/view/index/shop_backend/search_result.html
@@ -79,6 +79,7 @@
 
     <div class="form-group" style="padding:10px;">
         <div class="disf">
+            <div style="white-space:nowrap;">排序版式：</div>
             <input type="text" class="layui-input" lay-verify="required" name="search_format[0]" value="{$data['search_format'][0]}" placeholder="N行">
             <div class="layui-input-split layui-input-suffix">行</div>
             <input type="text" class="layui-input" lay-verify="required" name="search_format[1]" value="{$data['search_format'][1]}" placeholder="Y个" style="background:#D2D2D2;" readonly>
