--- a/application/index/view/index/shop_backend/save_shop_rotate.html
+++ b/application/index/view/index/shop_backend/save_shop_rotate.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="layui-form-item">
-            <div class="layui-form-label">轮播图<br/>(1920*565)</div>
+            <div class="layui-form-label">轮播图<br/>(像素：1920*565)</div>
             <div class="layui-input-block">
                 <div class="layui-upload" style="margin-top: 10px;">
                     <button type="button" class="layui-btn" id="img_file-upload">上传图片(一张)</button>
