--- a/application/index/view/layouts/shop_header.html
+++ b/application/index/view/layouts/shop_header.html
@@ -40,3 +40,8 @@
 </head>
 <script src="shop/js/jquery.js"></script>
 <script src="shop/bootstrap/js/bootstrap.min.js?v=5"></script>
+
+<!--谷歌翻译SCRIPT-->
+<div class="gtranslate_wrapper"></div>
+<script>window.gtranslateSettings = {"default_language":"zh-CN","native_language_names":true,"url_structure":"sub_directory","languages":["zh-CN","ja","fy","zh-TW","ms","en","ko","ru","de"],"wrapper_selector":".gtranslate_wrapper","switcher_horizontal_position":"right","switcher_vertical_position":"top"}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
