--- a/application/index/view/index/website/website_official.html
+++ b/application/index/view/index/website/website_official.html
@@ -486,34 +486,7 @@
                 <div class="form-section">
                     <h3 class="form-title"><i class="fas fa-users"></i> 会员管理</h3>
 
-                    <table class="member-table">
-                        <thead>
-                        <tr>
-                            <th>用户名</th>
-                            <th>邮箱</th>
-                            <th>注册时间</th>
-                            <th>操作</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {if empty($user)}
-                            <tr>
-                                <td colspan="4" style="text-align:center;">--暂无用户信息--</td>
-                            </tr>
-                        {else}
-                            {volist name="user" id="vo"}
-                            <tr>
-                                <td>{$vo['nickname']}</td>
-                                <td>{$vo['email']}</td>
-                                <td><?php echo date('Y-m-d H:i',$vo['createtime']);?></td>
-                                <td>
-                                    <button class="channel-btn btn-edit"><i class="fas fa-edit"></i> 编辑</button>
-                                </td>
-                            </tr>
-                            {/volist}
-                        {/if}
-                        </tbody>
-                    </table>
+                    <table class="layui-hide" id="memberTable"></table>
                 </div>
             </div>
         </div>
@@ -551,7 +524,7 @@
 <div class="modal" id="saveDiscoveryModal">
     <div class="modal-content">
         <span class="close-modal close-modal-discovery">&times;</span>
-        <h2 class="modal-title">保存发现轮播</h2>
+        <h2 class="modal-title">保存信息</h2>
         <iframe src="" class="discovery_iframe" frameborder="0" style="width: 100%;height:600px;"></iframe>
     </div>
 </div>
@@ -944,6 +917,36 @@
             return false;
         });
         //轮播图=================end
+
+        //会员管理=================end
+        table.render({
+            elem: '#memberTable'
+            ,url: "/?s=index/member_manage&pa=1&company_type={$company_type}&company_id={$company_id}"
+            ,cellMinWidth: 200
+            ,cols: [[
+                {field:'realname', width:200, title: '买家名称'}
+                ,{field:'nickname', width:200, title: '买家昵称'}
+                ,{field:'email', width:200, title: '邮箱地址'}
+                ,{field:'phone', width:200, title: '手机号码'}
+                ,{field:'createtime', width:200, title: '创建时间'}
+                ,{align:'center', fixed: 'right', title: '操作', templet: function(d){
+                        var result = "";
+
+                        result += '<a onclick="save_member(1,' + "'/?s=index/save_member&company_type={$company_type}&company_id={$company_id}&id="+ d.id + '\');" class="layui-btn layui-btn-xs btn-edit btn"><i class="fas fa-edit"></i> 编辑</a>';
+                        // result += '<a onclick="del('+ "'"+d.id+"'" +',1);" class="layui-btn layui-btn-xs btn-delete btn"><i class="fas fa-trash"></i> 删除</a>';
+
+                        return [
+                            result
+                        ].join('');
+
+                        return result;
+                    }}
+            ]]
+            ,page: true
+        });
+        //会员管理=================end
+
+
     });
 
     //轮播图编辑
@@ -1012,6 +1015,16 @@
             modal.style.display = 'flex';
 
             $('#saveDiscoveryModal .discovery_iframe').attr('src','/?s=index/save_website_discovery&company_id={$company_id}&company_type=1');
+        }
+    }
+
+    function save_member(type,url) {
+        if(type==1){
+            //轮播图
+            var modal = document.getElementById('saveMenuModal');
+            modal.style.display = 'flex';
+
+            $('#saveMenuModal .saveDiscoveryModal').attr('src',url);
         }
     }
 
