--- a/application/index/view/common/footer2.html
+++ b/application/index/view/common/footer2.html
@@ -9,24 +9,24 @@
             <div class="footer-column">
                 <h3>快速链接</h3>
                 <ul class="footer-links">
-                    <li><a href="#intro"><i class="fas fa-chevron-right"></i>平台简介</a></li>
-                    <li><a href="#features"><i class="fas fa-chevron-right"></i>功能特性</a></li>
-                    <li><a href="#management"><i class="fas fa-chevron-right"></i>账户管理</a></li>
-                    <li><a href="#"><i class="fas fa-chevron-right"></i>使用教程</a></li>
-                    <li><a href="#"><i class="fas fa-chevron-right"></i>常见问题</a></li>
+                    <li><a href="//dtc.gogo198.net/#intro"><i class="fas fa-chevron-right"></i>平台简介</a></li>
+                    <li><a href="//dtc.gogo198.net/#features"><i class="fas fa-chevron-right"></i>功能特性</a></li>
+<!--                    <li><a href="#management"><i class="fas fa-chevron-right"></i>账户管理</a></li>-->
+<!--                    <li><a href="#"><i class="fas fa-chevron-right"></i>使用教程</a></li>-->
+<!--                    <li><a href="#"><i class="fas fa-chevron-right"></i>常见问题</a></li>-->
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>联系我们</h3>
                 <ul class="footer-links">
-                    <li><a href="mailto:support@website.gogo198.net"><i class="fas fa-envelope"></i>support@website.gogo198.net</a></li>
-                    <li><a href="tel:+12345678900"><i class="fas fa-phone"></i>+1 234 567 8900</a></li>
-                    <li><a href="#"><i class="fas fa-map-marker-alt"></i>北京市海淀区中关村大街1号</a></li>
+                    <li><a href="mailto:support@website.gogo198.net"><i class="fas fa-envelope"></i>198@gogo198.net</a></li>
+                    <li><a href="tel:+86 757-86329911"><i class="fas fa-phone"></i>+86 757-86329911</a></li>
+<!--                    <li><a href="#"><i class="fas fa-map-marker-alt"></i>北京市海淀区中关村大街1号</a></li>-->
                 </ul>
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2023 website.gogo198.net 独立站平台. 保留所有权利.</p>
+            <p>&copy; 2025 dtc.gogo198.net 独立站平台. 保留所有权利.</p>
         </div>
     </div>
 </footer>
