--- a/application/index/view/common/header2.html
+++ b/application/index/view/common/header2.html
@@ -166,9 +166,9 @@
                 <span>燚境国际</span>
             </div>
             <ul class="nav-links">
-                <li><a href="#intro">平台简介</a></li>
-                <li><a href="#features">功能特性</a></li>
-                <li><a href="#contact">联系我们</a></li>
+                <li><a href="//dtc.gogo198.net/#intro">平台简介</a></li>
+                <li><a href="//dtc.gogo198.net/#features">功能特性</a></li>
+<!--                <li><a href="#contact">联系我们</a></li>-->
                 <li class="nav_login">
                     {if !empty(session('account'))}
                     <!-- 这里假设用户已登录 -->
@@ -177,19 +177,9 @@
                         <li class="subitem">
                             <a href="#" class="sublink f16">站点管理 <i class="fas fa-chevron-right"></i></a>
                             <ul class="submenu">
-<!--                                <li class="subitem"><a href="/?s=index/website_manage" target="_blank" class="sublink f16">域名解析</a></li>-->
                                 <li class="subitem"><a href="/?s=index/website_manage" target="_blank" class="sublink f16">服务管理</a></li>
                             </ul>
                         </li>
-<!--                        <li class="subitem">-->
-<!--                            <a href="#" class="sublink f16">功能服务 <i class="fas fa-chevron-right"></i></a>-->
-<!--                            <ul class="submenu">-->
-<!--                                <li class="subitem"><a href="" target="_blank" class="sublink f16">官方网站</a></li>-->
-<!--                                <li class="subitem"><a href="" target="_blank" class="sublink f16">官方商店</a></li>-->
-<!--                                <li class="subitem"><a href="" target="_blank" class="sublink f16">客服群组</a></li>-->
-<!--                                <li class="subitem"><a href="" target="_blank" class="sublink f16">智能服务</a></li>-->
-<!--                            </ul>-->
-<!--                        </li>-->
                         <li class="subitem">
                             <a href="https://boss.gogo198.cn/?s=index/member_login&uid=<?php echo base64_encode(session('account.id'));?>" target="_blank" class="sublink f16">
                                 <i class="fas fa-user-circle"></i> 个人中心
@@ -223,10 +213,6 @@
                                 <i class="fas fa-sitemap"></i>
                                 站点管理
                             </a>
-<!--                            <i class="fas fa-chevron-right"></i></a>-->
-<!--                            <ul class="submenu">-->
-<!--                                <li class="subitem"><a href="/?s=index/website_manage" target="_blank" class="sublink f16"><i class="fas fa-server"></i> 服务管理</a></li>-->
-<!--                            </ul>-->
                         </li>
                         <li class="subitem">
                             <a href="https://boss.gogo198.cn/?s=index/member_login&uid=<?php echo base64_encode(session('account.id'));?>" target="_blank" class="sublink f16">
