--- a/application/index/view/index/website/website_official.html
+++ b/application/index/view/index/website/website_official.html
@@ -1022,10 +1022,10 @@
     function save_member(type,url) {
         if(type==1){
             //轮播图
-            var modal = document.getElementById('saveMenuModal');
+            var modal = document.getElementById('saveDiscoveryModal');
             modal.style.display = 'flex';
 
-            $('#saveMenuModal .saveDiscoveryModal').attr('src',url);
+            $('#saveMenuModal .discovery_iframe').attr('src',url);
         }
     }
 
