--- a/application/index/view/index/website/website_official.html
+++ b/application/index/view/index/website/website_official.html
@@ -1025,7 +1025,7 @@
             var modal = document.getElementById('saveDiscoveryModal');
             modal.style.display = 'flex';
 
-            $('#saveMenuModal .discovery_iframe').attr('src',url);
+            $('#saveDiscoveryModal .discovery_iframe').attr('src',url);
         }
     }
 
