--- a/application/index/view/index/website_manage.html
+++ b/application/index/view/index/website_manage.html
@@ -371,7 +371,7 @@
                             }
                             html2 += '</div>';
                         }else{
-                            html2 = '<div class="tips">请联系管理员添加功能权限</div>';
+                            html2 = '<div class="tips" style="text-align: center;font-size: 15px;">请联系管理员添加功能权限</div>';
                         }
 
                         $('.dashboard .sites-panel .sites-container').html(html2);
