--- a/application/index/view/index/merch_index.html
+++ b/application/index/view/index/merch_index.html
@@ -160,7 +160,7 @@
     /**业务切换框样式 end**/
 
     /* 常见问题项容器样式1 start*/
-    .fold_boxClick .fold_body{padding:10px;box-sizing: border-box;background: #102f50;box-shadow: 0px 0px 10px 1px #555;border-radius: 10px;min-height: 500px;height:500px;max-height:500px;overflow-y: auto;width:100%;}
+    .fold_boxClick .fold_body{padding:10px;box-sizing: border-box;box-shadow: 0px 0px 10px 1px #555;border-radius: 10px;min-height: 500px;height:500px;max-height:500px;overflow-y: auto;width:100%;}
     .fold_boxClick .faq-item {border: 1px solid #eee;border-radius: 6px;margin-bottom: 10px;overflow: hidden;}
     /* 标题样式 */
     .fold_boxClick .faq-title {background-color: {$website['color']};color:{$website['color_word']};padding: 12px 16px;cursor: pointer;font-weight: 600;font-size:15px;display: flex;justify-content: space-between;align-items: center;position:relative;}
@@ -854,6 +854,19 @@
         }
         return swiperInstances[swiperClass];
     }
+
+    //将颜色变成rgb格式1
+    function calculateRgba(baseColor, opacity) {
+        const r = baseColor.substring(1, 3);
+        const g = baseColor.substring(3, 5);
+        const b = baseColor.substring(5, 7);
+        return `rgba(${parseInt(r, 16)}, ${parseInt(g, 16)}, ${parseInt(b, 16)}, ${opacity})`;
+    }
+    //将颜色变成rgb格式2
+    $(function(){
+        let calcrgba = calculateRgba('{$websites['color']}',0.8);
+        $('.fold_boxClick .fold_body').css('background-color',calcrgba);
+    });
 
     $(function () {
         //头部新闻滚动 start
