--- a/application/index/view/index/merch_index.html
+++ b/application/index/view/index/merch_index.html
@@ -864,7 +864,7 @@
     }
     //将颜色变成rgb格式2
     $(function(){
-        let calcrgba = calculateRgba('{$websites['color']}',0.8);
+        let calcrgba = calculateRgba('{$website['color']}',0.8);
         $('.fold_boxClick .fold_body').css('background-color',calcrgba);
     });
 
