--- a/application/index/view/index/merch_index.html
+++ b/application/index/view/index/merch_index.html
@@ -1036,7 +1036,7 @@
                 }
 
                 $(window).on('resize', checkArrows);
-                checkArrows();
+                //checkArrows();
 
                 $prevArrow.on('click', function () {
                     $tabNav.animate({ scrollLeft: '-=100' }, 300);
