--- a/application/index/view/index/cross_news_detail.html
+++ b/application/index/view/index/cross_news_detail.html
@@ -1,4 +1,4 @@
-{include file="common/header"}
+{include file="common/header1"}
 <link rel="stylesheet" href="layui/css/layui.css">
 <script src="layui/layui.js"></script>
 <link href="css/gallery-1.css" rel="stylesheet">
